# train-station

./: .gitignore  .gitmessage  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/: BRANCH_NAMING.md  CODEOWNERS  (+1 more)
libtorch-validation/: Cargo.toml  README.md  build.rs
libtorch-validation/examples/benches/: add_performance.rs  cat_performance.rs  div_performance.rs  flatten_performance.rs  matmul_performance.rs  mul_performance.rs  permute_performance.rs  stack_performance.rs  sub_performance.rs  transpose_performance.rs  view_performance.rs
libtorch-validation/scripts/visualization/: performance_scatter.py  requirements.txt
libtorch-validation/src/: lib.rs
libtorch-validation/src/ffi/: libtorch_adam.rs  libtorch_tensor.rs  libtorch_wrapper.cpp  libtorch_wrapper.h  mod.rs
libtorch-validation/src/performance/: core.rs  mod.rs
libtorch-validation/src/performance/tensor/: mod.rs
libtorch-validation/src/performance/tensor/ops/: add.rs  div.rs  matmul.rs  mod.rs  mul.rs  sub.rs
libtorch-validation/src/performance/tensor/transform/: cat.rs  flatten.rs  mod.rs  permute.rs  stack.rs  transpose.rs  view.rs
libtorch-validation/src/validation/: core.rs  mod.rs
libtorch-validation/src/validation/optimizers/: adam.rs  mod.rs
libtorch-validation/src/validation/tensor/: iterator.rs  mod.rs  views.rs
libtorch-validation/src/validation/tensor/indexing/: gather.rs  index_select.rs  masked_fill.rs  mod.rs  select.rs
libtorch-validation/src/validation/tensor/ops/: add.rs  broadcasting_gradients.rs  complex_broadcasting_gradients.rs  div.rs  exp.rs  leaky_relu.rs  log.rs  matmul.rs  mod.rs  mul.rs  non_contiguous_gradients.rs  pow.rs  relu.rs  sigmoid.rs  softmax.rs  sqrt.rs  sub.rs  sum.rs  tanh.rs  view_gradient_accumulation.rs
libtorch-validation/src/validation/tensor/reductions/: argmax.rs  argmin.rs  max.rs  mean.rs  min.rs  mod.rs  norm.rs  std.rs  sum.rs  var.rs
libtorch-validation/src/validation/tensor/transform/: cat.rs  contiguous.rs  flatten.rs  mod.rs  permute.rs  reshape.rs  slice_view.rs  split.rs  squeeze.rs  stack.rs  transpose.rs  unsqueeze.rs  view.rs
train-station/: Cargo.toml  build.rs
train-station/examples/getting_started/: mod.rs  optimizer_basics.rs  serialization_basics.rs  tensor_basics.rs  tensor_operators.rs
train-station/examples/iterators/: advanced_patterns.rs  element_iteration.rs  mod.rs  performance_optimization.rs
train-station/examples/neural_networks/: basic_linear_layer.rs  feedforward_network.rs  mod.rs
train-station/examples/optimizers/: adam_configurations.rs  learning_rate_scheduling.rs  mod.rs
train-station/examples/serialization/: basic_structs.rs  error_handling.rs  json_vs_binary.rs  mod.rs  nested_structures.rs
train-station/src/: device.rs  lib.rs
train-station/src/cuda/: context.rs  cuda_wrapper.cpp  cuda_wrapper.h  device.rs  kernels.rs  memory.rs  mod.rs  stream.rs
train-station/src/gradtrack/: engine.rs  mod.rs  no_grad_track.rs
train-station/src/gradtrack/grad_fn/: mod.rs  utils.rs
train-station/src/gradtrack/grad_fn/indexing/: gather.rs  index_select.rs  masked_fill.rs  mod.rs  select.rs
train-station/src/gradtrack/grad_fn/ops/: add.rs  div.rs  exp.rs  leaky_relu.rs  log.rs  matmul.rs  mod.rs  mul.rs  pow.rs  relu.rs  sigmoid.rs  softmax.rs  sqrt.rs  sub.rs  tanh.rs
train-station/src/gradtrack/grad_fn/reductions/: max.rs  mean.rs  min.rs  mod.rs  norm.rs  std.rs  sum.rs  var.rs
train-station/src/optimizers/: mod.rs
train-station/src/optimizers/adam/: mod.rs  serialization.rs
train-station/src/serialization/: mod.rs
train-station/src/serialization/binary/: crc32.rs  error.rs  header.rs  mod.rs  reader.rs  structs.rs  types.rs  writer.rs
train-station/src/serialization/core/: deserializer.rs  error.rs  impls.rs  mod.rs  serializer.rs  tests.rs  traits.rs  types.rs
train-station/src/serialization/json/: error.rs  escape.rs  formatter.rs  mod.rs  parser.rs  structs.rs  value.rs
train-station/src/tensor/: mod.rs
train-station/src/tensor/core/: allocation.rs  mod.rs  operators.rs  serialization.rs  shape.rs  utils.rs
train-station/src/tensor/indexing/: gather.rs  index_select.rs  masked_fill.rs  mod.rs  select.rs
train-station/src/tensor/init/: basic.rs  data.rs  mod.rs  random.rs
train-station/src/tensor/iterator/: mod.rs
train-station/src/tensor/ops/: add.rs  broadcasting.rs  div.rs  exp.rs  leaky_relu.rs  log.rs  mod.rs  mul.rs  pow.rs  relu.rs  sigmoid.rs  softmax.rs  sqrt.rs  sub.rs  tanh.rs
train-station/src/tensor/reductions/: argmax.rs  argmin.rs  max.rs  mean.rs  min.rs  mod.rs  norm.rs  std.rs  sum.rs  var.rs
train-station/src/tensor/transform/: cat.rs  contiguous.rs  flatten.rs  mod.rs  permute.rs  reshape.rs  split.rs  squeeze.rs  stack.rs  transpose.rs  unsqueeze.rs  view.rs
(+19 files in other folders)
